crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__bash_quotes_single_quotes.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "format!(\"plain => {}\\na'b => {}\\nwith $ and `cmd` => {}\", bash_quote(\"plain\"),\nbash_quote(\"a'b\"), bash_quote(\"with $ and `cmd`\"))"
---
plain => 'plain'
a'b => 'a'\''b'
with $ and `cmd` => 'with $ and `cmd`'
