crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__dotenv_escapes_special_characters.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "format!(\"plain => {}\\na\\\"b => {}\\na\\\\b => {}\\nmulti-line => {}\\ncrlf => {}\",\ndotenv_quote(\"plain\"), dotenv_quote(\"a\\\"b\"), dotenv_quote(\"a\\\\b\"),\ndotenv_quote(\"multi\\nline\"), dotenv_quote(\"crlf\\r\\n\"))"
---
plain => "plain"
a"b => "a\"b"
a\b => "a\\b"
multi-line => "multi\nline"
crlf => "crlf\r\n"
