crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__emit_github_appends_to_output_and_masks.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "std::fs::read_to_string(&path).unwrap()"
---
API_KEY<<__MONOSECRET_ENV_EOF__
secret
__MONOSECRET_ENV_EOF__
DB<<__MONOSECRET_ENV_EOF__
multi
line
__MONOSECRET_ENV_EOF__
