crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__emit_to_output_file_writes_render.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "std::fs::read_to_string(&path).unwrap()"
---
export API_KEY='secret';
