crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__fish_escapes_backslash_and_single_quote.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "format!(\"plain => {}\\na'b => {}\\na\\\\b => {}\", fish_quote(\"plain\"),\nfish_quote(\"a'b\"), fish_quote(\"a\\\\b\"))"
---
plain => 'plain'
a'b => 'a\'b'
a\b => 'a\\b'
