crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__github_multiline_value_uses_heredoc.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "render(Shell::Github, &pairs)"
---
KEY<<__MONOSECRET_ENV_EOF__
line1
line2
__MONOSECRET_ENV_EOF__
