crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__nushell_escapes_backslash_and_double_quote.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "format!(\"plain => {}\\na\\\"b => {}\\na\\\\b => {}\", nu_quote(\"plain\"),\nnu_quote(\"a\\\"b\"), nu_quote(\"a\\\\b\"))"
---
plain => "plain"
a"b => "a\"b"
a\b => "a\\b"
