crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__powershell_doubles_single_quotes.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "format!(\"plain => {}\\na'b => {}\", ps_quote(\"plain\"), ps_quote(\"a'b\"))"
---
plain => 'plain'
a'b => 'a''b'
