crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__render_bash_emits_exports.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "render(Shell::Bash, &pairs)"
---
export API_KEY='secret';
