crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__render_dotenv.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "render(Shell::Dotenv, &pairs)"
---
API_KEY="secret"
