crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__render_fish_emits_set_gx.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "render(Shell::Fish, &pairs)"
---
set -gx API_KEY 'secret value';
