crates/monosecret/src/cli/snapshots/monosecret__cli__shell__tests__render_github_uses_heredoc_blocks.snap
---
source: crates/monosecret/src/cli/shell.rs
expression: "render(Shell::Github, &pairs)"
---
API_KEY<<__MONOSECRET_ENV_EOF__
secret
__MONOSECRET_ENV_EOF__
